tests/ui/variant.stderr
error: #[optional] at an invalid position
 --> $DIR/variant.rs:8:9
  |
8 |         #[optional]
  |         ^^^^^^^^^^^

error: #[untagged] at an invalid position
  --> $DIR/variant.rs:14:9
   |
14 |         #[untagged]
   |         ^^^^^^^^^^^

error: #[flatten] at an invalid position
  --> $DIR/variant.rs:20:9
   |
20 |         #[flatten]
   |         ^^^^^^^^^^

error: #[untagged] at an invalid position
  --> $DIR/variant.rs:27:12
   |
27 |         V1(#[untagged] String),
   |            ^^^^^^^^^^^

error: #[optional] at an invalid position
  --> $DIR/variant.rs:33:12
   |
33 |         V1(#[optional] String),
   |            ^^^^^^^^^^^

error: #[tag] at an invalid position
  --> $DIR/variant.rs:39:12
   |
39 |         V1(#[tag = 1] String),
   |            ^^^^^^^^^^

error: #[flatten] at an invalid position
  --> $DIR/variant.rs:45:12
   |
45 |         V1(#[flatten] String),
   |            ^^^^^^^^^^

error: #[optional] at an invalid position
  --> $DIR/variant.rs:51:9
   |
51 |         #[optional]
   |         ^^^^^^^^^^^

error: #[untagged] at an invalid position
  --> $DIR/variant.rs:58:9
   |
58 |         #[untagged]
   |         ^^^^^^^^^^^

error: #[tag] at an invalid position
  --> $DIR/variant.rs:65:9
   |
65 |         #[tag = 1]
   |         ^^^^^^^^^^

error: #[flatten] at an invalid position
  --> $DIR/variant.rs:72:9
   |
72 |         #[flatten]
   |         ^^^^^^^^^^

error: #[untagged] at an invalid position
  --> $DIR/variant.rs:79:12
   |
79 |         V1(#[untagged] String),
   |            ^^^^^^^^^^^

error: #[optional] at an invalid position
  --> $DIR/variant.rs:85:12
   |
85 |         V1(#[optional] String),
   |            ^^^^^^^^^^^

error: #[tag] at an invalid position
  --> $DIR/variant.rs:91:12
   |
91 |         V1(#[tag = 1] String),
   |            ^^^^^^^^^^

error: #[flatten] at an invalid position
  --> $DIR/variant.rs:97:12
   |
97 |         V1(#[flatten] String),
   |            ^^^^^^^^^^

error: #[optional] at an invalid position
   --> $DIR/variant.rs:106:9
    |
106 |         #[optional]
    |         ^^^^^^^^^^^

error: #[untagged] at an invalid position
   --> $DIR/variant.rs:112:9
    |
112 |         #[untagged]
    |         ^^^^^^^^^^^

error: #[flatten] at an invalid position
   --> $DIR/variant.rs:118:9
    |
118 |         #[flatten]
    |         ^^^^^^^^^^

error: #[untagged] at an invalid position
   --> $DIR/variant.rs:125:12
    |
125 |         V1(#[untagged] String),
    |            ^^^^^^^^^^^

error: #[optional] at an invalid position
   --> $DIR/variant.rs:131:12
    |
131 |         V1(#[optional] String),
    |            ^^^^^^^^^^^

error: #[tag] at an invalid position
   --> $DIR/variant.rs:137:12
    |
137 |         V1(#[tag = 1] String),
    |            ^^^^^^^^^^

error: #[flatten] at an invalid position
   --> $DIR/variant.rs:143:12
    |
143 |         V1(#[flatten] String),
    |            ^^^^^^^^^^

error: #[optional] at an invalid position
   --> $DIR/variant.rs:149:9
    |
149 |         #[optional]
    |         ^^^^^^^^^^^

error: #[untagged] at an invalid position
   --> $DIR/variant.rs:156:9
    |
156 |         #[untagged]
    |         ^^^^^^^^^^^

error: #[tag] at an invalid position
   --> $DIR/variant.rs:163:9
    |
163 |         #[tag = 1]
    |         ^^^^^^^^^^

error: #[flatten] at an invalid position
   --> $DIR/variant.rs:170:9
    |
170 |         #[flatten]
    |         ^^^^^^^^^^

error: #[untagged] at an invalid position
   --> $DIR/variant.rs:177:12
    |
177 |         V1(#[untagged] String),
    |            ^^^^^^^^^^^

error: #[optional] at an invalid position
   --> $DIR/variant.rs:183:12
    |
183 |         V1(#[optional] String),
    |            ^^^^^^^^^^^

error: #[tag] at an invalid position
   --> $DIR/variant.rs:189:12
    |
189 |         V1(#[tag = 1] String),
    |            ^^^^^^^^^^

error: #[flatten] at an invalid position
   --> $DIR/variant.rs:195:12
    |
195 |         V1(#[flatten] String),
    |            ^^^^^^^^^^
